doc/rtf/genai_history.txt

Images should be stored in AWS S3 and accessed using IAM role of the application (pre-signed URLs). configure it


=============

well done, but insert you generated code to my project directly

=============


Create an S3 bucket in my AWS account, name is winston-flask-q


=============

  File "F:\image_gallery\app.py", line 276
    if tag_name:name:
                     ^
SyntaxError: invalid syntax